--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "typeorm",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon --exec ts-node ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^20.12.5",
-    "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.4"
-  }
+   "name": "typeorm",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "dev": "nodemon --exec ts-node ./src/index.ts",
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "@types/express": "^4.17.21",
+      "@types/morgan": "^1.9.9",
+      "@types/node": "^20.12.5",
+      "express": "^4.19.2",
+      "morgan": "^1.10.0",
+      "nodemon": "^3.1.0",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "ts-node": "^10.9.2",
+      "typeorm": "0.3.20",
+      "typescript": "^5.4.4"
+   },
+   "devDependencies": {
+      "ts-node": "10.9.1",
+      "@types/node": "^16.11.10",
+      "typescript": "4.5.2"
+   }
 }
